k8s-deploy/k8s/axon-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: axon
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: axon-ingress
spec:
  rules:
  - host: axon1-testnet-monitor.nervos.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: axon1
          servicePort: 8100

  - host: axon2-testnet-monitor.nervos.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: axon2
          servicePort: 8100

  - host: axon3-testnet-monitor.nervos.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: axon3
          servicePort: 8100

  - host: axon4-testnet-monitor.nervos.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: axon4
          servicePort: 8100
